# oracle-arm-03

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: config.py  main.py
app/routers/: chat.py  embed.py  semantic.py
app/schemas/: article.py  chat.py  common.py
app/services/: embedder.py  sync_to_embed.py  vector_store.py
embed/: config.py  main.py
